[package]
name = "jedec"
version = "0.0.4"
authors = ["R <rqou@berkeley.edu>"]
license = "0BSD"
description = "A library for working with JEDEC programming files"
repository = "https://github.com/rqou/rust-jedec"
keywords = ["cpld", "pal", "gal", "jed", "jedec"]
categories = ["parser-implementations"]
edition = "2021"

[profile.release]
lto = true

[lib]
name = "jedec"
crate-type = ["rlib"]
