[package]
name = "jedec"
version = "0.2.0"
authors = ["R <rqou@berkeley.edu>"]
license = "0BSD"
description = "A library for working with JEDEC programming files"
repository = "https://github.com/rqou/rust-jedec"
keywords = ["cpld", "pal", "gal", "jed", "jedec"]
categories = ["parser-implementations"]
edition = "2021"

[profile.release]
lto = true

[features]
alloc = ["bitvec/alloc"]
std = ["alloc"]
default = ["std"]

[dependencies]
bitvec = { version = "1", default-features = false }
